--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
         <h1>Catálogo de Pintores Parceiros</h1>
     </header>
 
+    <a href="cadastro.html"><button class="submit-rating">Quero ser parceiro</button></a>
+
     <section class="painters-list">
         <!-- Exemplo de pintor -->
         <div class="painter-card">
